feat: 域名详情查询

--- a/frontend/src/pages/dashboard/style.less
+++ b/frontend/src/pages/dashboard/style.less
@@ -38,11 +38,12 @@
       flex: 1;
 
       .row2-item {
+        margin-left: 8px;
         &:nth-child(1) {
+          margin-left: 0;
           width: 50%;
         }
         &:nth-child(2) {
-          margin-left: 8px;
           width: 50%;
         }
       }
@@ -58,9 +59,6 @@
         &:nth-child(1) {
           margin-left: 0;
           width: 100%;
-        }
-        &:nth-child(2) {
-          width: 60%;
         }
       }
     }
