--- a/frontend/src/components/Table/style.less
+++ b/frontend/src/components/Table/style.less
@@ -1,11 +1,29 @@
+.title {
+  text-align: center;
+  color: #e7e7e7;
+  line-height: 46px;
+}
+
 table {
   text-align: center;
   font-size: 14px;
+  color: #d0d0d0;
+  thead {
+    th {
+      padding: 4px 8px;
+      border: none;
+    }
+  }
   tbody {
     overflow-y: auto;
-  }
-  tr {
-    line-height: 24px;
+    tr {
+      line-height: 28px;
+      td {
+        padding: 0 4px;
+        word-break: break-all;
+        word-wrap: break-word;
+      }
+    }
   }
 }
 
@@ -18,14 +36,14 @@ table {
   margin-top: 8px;
   .page {
     margin: 0 8px;
-    border: none;
+    font-weight: bold;
+    border-bottom: 2px solid #7bc165;
   }
   &-item {
-    border: 1px solid #fff;
-    padding: 2px 6px;
+    padding: 4px 8px;
     font-size: 14px;
     &:hover {
-      background: rgba(0, 0, 0, 0.2);
+      background: rgba(255, 255, 255, 0.2);
     }
   }
 }
